--- a/assets/CSS/addproduct.css
+++ b/assets/CSS/addproduct.css
@@ -27,8 +27,9 @@ border-radius: 2%;
 width:100%;
 }
 textarea{
-    border-radius: 2%;
-	border:2px solid black;
+    border-radius: 1%;
+	border:1.5px solid rgb(46, 46, 46);
+	width: 100%	;
     
 }
 .uk-container{
