--- a/assets/CSS/membership.css
+++ b/assets/CSS/membership.css
@@ -1,6 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,700,900italic,900);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900);
+
 body{
   background-color:rgb(250, 250, 250);
   width: 100%;
@@ -8,12 +6,19 @@ body{
   margin-right: auto;
 }
 .container{
-  width: 75%;
+  align-items: center;
+  text-align: center;
+  width:fit-content;
   height: fit-content;
-  padding-bottom: 30px;;
+  padding-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
+.generic_content{
+  width:100%;
+  height: fit-content;
+}
 
 /*PRICE COLOR CODE START*/
 #generic_price_table .generic_content{
@@ -181,12 +186,13 @@ body{
   -webkit-border-radius: 50px;
     display: inline-block;
     font-family: "Lato",sans-serif;
-    font-size: 18px;
+    font-size: 12px;
     outline: medium none;
-    padding: 12px 30px;
+    padding: 7px 7px;
     text-decoration: none;
     text-transform: uppercase;
 }
+
 @media (max-width: 320px) { 
 }
 
@@ -202,8 +208,7 @@ body{
   }
   
   #generic_price_table .col-md-4{
-    float:left;
-    width:50%;
+    width:20%;
   }
   
   #generic_price_table .generic_content{
@@ -216,16 +221,15 @@ body{
 }
 .text-center h1,
 .text-center h1 a{
-  color: #7885CB;
-  font-size: 30px;
-  font-weight: 300;
+  color: #000000 !important;
+  font-size: 20px !important;
   text-decoration: none;
 }
 .price-heading{
     text-align: center;
 }
 .price-heading h1{
-  color: #666;
+  color: rgb(0, 0, 0);
   margin: 0;
   padding: 0 0 50px 0;
 }
