--- a/assets/CSS/register.css
+++ b/assets/CSS/register.css
@@ -5,10 +5,11 @@
   
   body {
     font-family: "Prompt",sans-serif;
-    color: #333;
+    color: #0000 !important;
     font-size: 13px;
     margin: 0; 
   }
+  
   
   a:visited{
     color: black;
@@ -71,6 +72,7 @@
     margin-right: auto;
     padding-left: 10px;
     padding-right: 10px;
+    margin-top: 5%;
    }
   
   
@@ -88,6 +90,7 @@
     h3{
       text-align: center !important;
       font-size: x-large;
+      color: black !important;
     }
 
     form{
